--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,48 +15,55 @@
         android:layout_marginStart="75dp"
         android:layout_marginTop="9dp"
         android:text="@string/title"
+        android:textColor="@color/title"
         android:textSize="@dimen/titleSize" />
 
     <include
-        layout="@layout/images"
         android:id="@+id/imageGrid"
+        layout="@layout/images"
         android:layout_width="388dp"
         android:layout_height="593dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="96dp" />
+        android:layout_marginTop="96dp"
+        android:layout_marginBottom="50dp" />
 
     <TextView
-        android:id="@+id/score"
+        android:id="@+id/scoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="255dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginStart="256dp"
+        android:layout_marginTop="61dp"
         android:text="@string/score"
+        android:textColor="@color/title"
         android:textSize="@dimen/scoreSize" />
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="77dp"
+        android:layout_marginStart="95dp"
         android:layout_marginTop="62dp"
         android:text="@string/time"
+        android:textColor="@color/title"
         android:textSize="@dimen/scoreSize" />
 
     <Button
         android:id="@+id/resetBttn"
+        android:background="@color/background"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="163dp"
         android:layout_marginTop="692dp"
+        android:layout_marginBottom="3dp"
+        android:textColor="@color/reset"
         android:text="@string/reset" />
 
 </RelativeLayout>
