--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,24 +32,24 @@
 
     <TextView
         android:id="@+id/scoreText"
-        android:layout_width="368dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginStart="256dp"
+        android:layout_marginTop="61dp"
         android:text="@string/score"
         android:textColor="@color/title"
         android:textSize="@dimen/scoreSize" />
 
     <TextView
         android:id="@+id/timeText"
-        android:layout_width="361dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="62dp"
         android:text="@string/time"
         android:textColor="@color/title"
         android:textSize="@dimen/scoreSize" />
